[tool.poetry]
name = "pythoneda-artifact-event-changes"
version = "0.0.1a2"
description = "Events related to changes in source code"
authors = ["rydnr <github@acm-sl.org>"]
readme = "README.md"
homepage = "https://github.com/pythoneda-artifact-event/changes"
packages = [{include = "pythonedaartifacteventchanges"}]

[tool.poetry.dependencies]
python = "^3.8"
pythoneda-artifact-shared-changes = "^0.0.1a1"
pythoneda-base = "^0.0.1a18"
unidiff = "^0.7.4"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
